// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hide the relative selection when hideRelative is true 1`] = `
<Fragment>
  <Switch
    checked={true}
    label="Show Absolute Value"
    onChange={[Function]}
  />
</Fragment>
`;

exports[`should match snapshot 1`] = `
<Fragment>
  <Switch
    checked={true}
    label="Show Absolute Value"
    onChange={[Function]}
  />
  <Switch
    checked={true}
    label="Show Relative Value"
    onChange={[Function]}
  />
</Fragment>
`;
